# refactored_exworld_experimental_classifier

./: .gitignore  pyproject.toml  test.py
lib/classifier/: pyproject.toml
lib/classifier/src/classifier/: __init__.py
lib/classifier/src/classifier/content/: __init__.py  base.py  interfaces.py
lib/classifier/src/classifier/content/handcrafted/: provider.py
lib/classifier/src/classifier/content/yaml/: __init__.py  provider.py
lib/classifier/src/classifier/export/: __init__.py  prompts.py
lib/classifier/src/classifier/infrastructure/: __init__.py
lib/classifier/src/classifier/infrastructure/llm/: __init__.py  clients.py  interfaces.py  vllm_client.py
lib/classifier/src/classifier/pipeline/: __init__.py  interfaces.py  merger.py  orchestrator.py  registry.py
lib/classifier/src/classifier/schemas/: __init__.py  base.py  factory.py  interfaces.py
lib/classifier/src/classifier/stages/: __init__.py  base.py
lib/classifier/src/classifier/stages/attribute_extraction/: __init__.py  prompts.py  stage.py
lib/classifier/src/classifier/stages/category_detection/: __init__.py  prompts.py  stage.py
lib/classifier/src/classifier/stages/element_extraction/: __init__.py  prompts.py  stage.py
lib/utils/: pyproject.toml
lib/utils/src/utils/: __init__.py  data_io.py  hierarchy_builder.py
svc/classification/: pyproject.toml
svc/classification/classification/scripts/: README.md  test.py  test_components.py  test_pipeline.py  test_quick.py
